force-app/main/default/objects/Ballot_Ready__c/Ballot_Ready__c.object-meta.xml
<CustomObject>
    <label>Ballot Ready</label>
    <nameField>
        <label>Ballot Ready Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ballot Ready</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>