force-app/main/default/objects/Ballot_Ready__c/fields/ballot_id_br__c.field-meta.xml
<CustomField>
    <fullName>ballot_id_br__c</fullName>
    <label>Ballot ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>