force-app/main/default/objects/Ballot_Ready__c/fields/BR_Address_1__c.field-meta.xml
<CustomField>
    <fullName>BR_Address_1__c</fullName>
    <formula>Street_Number__c + &apos; &apos; + Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BR Address 1</label>
    <type>Text</type>
</CustomField>