force-app/main/default/objects/Ballot_Ready__c/fields/BR_City__c.field-meta.xml
<CustomField>
    <fullName>BR_City__c</fullName>
    <label>BR City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>