force-app/main/default/objects/Ballot_Ready__c/fields/BR_Country__c.field-meta.xml
<CustomField>
    <fullName>BR_Country__c</fullName>
    <label>BR Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>