force-app/main/default/objects/Ballot_Ready__c/fields/BR_State__c.field-meta.xml
<CustomField>
    <fullName>BR_State__c</fullName>
    <label>BR State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>