force-app/main/default/objects/Ballot_Ready__c/fields/BR_Street__c.field-meta.xml
<CustomField>
    <fullName>BR_Street__c</fullName>
    <label>BR Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>