force-app/main/default/objects/Ballot_Ready__c/fields/BR_Zip__c.field-meta.xml
<CustomField>
    <fullName>BR_Zip__c</fullName>
    <label>BR Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>