force-app/main/default/objects/Ballot_Ready__c/fields/Contact_br__c.field-meta.xml
<CustomField>
    <fullName>Contact_br__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ballot Ready</relationshipLabel>
    <relationshipName>Ballot_Ready</relationshipName>
    <type>Lookup</type>
</CustomField>