force-app/main/default/objects/Ballot_Ready__c/fields/Downloaded_br__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_br__c</fullName>
    <label>Downloaded</label>
    <length>100</length>
    <type>Text</type>
</CustomField>