force-app/main/default/objects/Ballot_Ready__c/fields/Election_Center_Tiles_br__c.field-meta.xml
<CustomField>
    <fullName>Election_Center_Tiles_br__c</fullName>
    <label>Election Center Tiles</label>
    <length>100</length>
    <type>Text</type>
</CustomField>