force-app/main/default/objects/Ballot_Ready__c/fields/Emailed_br__c.field-meta.xml
<CustomField>
    <fullName>Emailed_br__c</fullName>
    <label>Emailed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>