force-app/main/default/objects/Ballot_Ready__c/fields/initial_referrer_link_br__c.field-meta.xml
<CustomField>
    <fullName>initial_referrer_link_br__c</fullName>
    <description>The link at which the user entered their address</description>
    <inlineHelpText>The link at which the user entered their address</inlineHelpText>
    <label>Initial Referrer Link</label>
    <type>Url</type>
</CustomField>