force-app/main/default/objects/Ballot_Ready__c/fields/Pledge_Reasons_br__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Reasons_br__c</fullName>
    <label>Pledge Reasons</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>