force-app/main/default/objects/Ballot_Ready__c/fields/Portal_br__c.field-meta.xml
<CustomField>
    <fullName>Portal_br__c</fullName>
    <label>Portal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>