force-app/main/default/objects/Ballot_Ready__c/fields/Printed_br__c.field-meta.xml
<CustomField>
    <fullName>Printed_br__c</fullName>
    <label>Printed</label>
    <length>100</length>
    <type>Text</type>
</CustomField>