force-app/main/default/objects/Ballot_Ready__c/fields/registration_flow_complete_br__c.field-meta.xml
<CustomField>
    <fullName>registration_flow_complete_br__c</fullName>
    <label>Registration Flow Complete</label>
    <length>100</length>
    <type>Text</type>
</CustomField>