force-app/main/default/objects/Ballot_Ready__c/fields/Session_Start_Time_br__c.field-meta.xml
<CustomField>
    <fullName>Session_Start_Time_br__c</fullName>
    <description>The date at which each user starts their session without time. Ballot Ready field = ds</description>
    <inlineHelpText>The date at which each user starts their session without time. Ballot Ready field = ds</inlineHelpText>
    <label>Session Start Time</label>
    <type>Date</type>
</CustomField>