force-app/main/default/objects/Ballot_Ready__c/fields/UTM_Campaign_br__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign_br__c</fullName>
    <description>The individual campaign name, slogan, promo code, etc. for a product.</description>
    <inlineHelpText>The individual campaign name, slogan, promo code, etc. for a product.</inlineHelpText>
    <label>UTM Campaign</label>
    <length>100</length>
    <type>Text</type>
</CustomField>