force-app/main/default/objects/Ballot_Ready__c/fields/UTM_content_br__c.field-meta.xml
<CustomField>
    <fullName>UTM_content_br__c</fullName>
    <description>Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective.</description>
    <inlineHelpText>Used to differentiate similar content, or links within the same ad. For example, if you have two call-to-action links within the same email message, you can use utm_content and set different values for each so you can tell which version is more effective.</inlineHelpText>
    <label>UTM Content</label>
    <length>100</length>
    <type>Text</type>
</CustomField>