force-app/main/default/objects/Ballot_Ready__c/fields/UTM_Medium_br__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium_br__c</fullName>
    <description>The advertising or marketing medium, for example</description>
    <inlineHelpText>The advertising or marketing medium, for example</inlineHelpText>
    <label>UTM Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>