force-app/main/default/objects/Ballot_Ready__c/fields/UTM_Source_br__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source_br__c</fullName>
    <label>UTM Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>