force-app/main/default/objects/Ballot_Ready__c/fields/UTM_Term_br__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term_br__c</fullName>
    <description>Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword.</description>
    <inlineHelpText>Identify paid search keywords. If you&apos;re manually tagging paid keyword campaigns, you should also use utm_term to specify the keyword.</inlineHelpText>
    <label>UTM Term</label>
    <length>100</length>
    <type>Text</type>
</CustomField>