force-app/main/default/objects/Ballot_Ready__c/fields/Voting_Plan_Created_br__c.field-meta.xml
<CustomField>
    <fullName>Voting_Plan_Created_br__c</fullName>
    <label>Voting Plan Created</label>
    <length>100</length>
    <type>Text</type>
</CustomField>